@@ -1,3 +1,8 @@
+Tue Mar  7 22:49:44 2006  James Cameron  <quozl@us.netrek.org>
+
+	* disp_web.c (display_web): remove reference to European
+	metaserver, add <head>, change title to Netrek Metaserver.
+
 Tue Feb 14 18:18:10 2006  James Cameron  <quozl@us.netrek.org>
 
 	* disp_info.c: add forward declaration to fix compiler error.
